2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: work around record_size bug in ndmjob

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amfetchdump.pl: check restored files more closely

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/taper.pl: taper installcheck to run multiple dumps
	  on a spanned NDMP device

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/Dumpcache.pm: Add an 'ndmp' dumpcache 
	* installcheck/Installcheck/Mock.pm: add a way to revive it for
	  recovery tests
	* installcheck/amfetchdump.pl: use it

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: correctly handle devices while they are
	  coming online after a load

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/scsiconst.h: fix typo in constant name

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/robot.pm: don't mark unknown but loaded tapes as
	  'blank', mark them as unknown

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/ndmp.pm: use the first MTE found, in systems
	  with several

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/ndmp.pm: add more SCSI error handling

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/ndmp.pm: use scsi data dir 'none' for MOVE
	  MEDIUM

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: fix parsing of device node in ndmp-device

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: fix dangling reference

2010-01-11  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/Makefile.am common-src/fileheader-test.c: new test
	* common-src/fileheader.c common-src/fileheader.h: validate a lot
	  of inputs; use g_debug; handle compressed/comp_suffix and
	  encrypted/encr_suffix in a sane way; remove unused encrypt_cmd; fix
	  bug in parsing empty heredoc